--- a/hotel-api/src/main/resources/application.properties
+++ b/hotel-api/src/main/resources/application.properties
@@ -3,6 +3,10 @@ server.port=8003
 
 # H2
 spring.h2.console.enabled=true
+
+# Locations of static resources.
+spring.resources.static-locations: classpath:/webapp/
+
 #spring.h2.console.path=/h2
 
 # Datasource
