adicionado eureka cliente..

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.application.name=reserva-hotel-api
+
+# Eureka
+eureka.instance.status-page-url-path=http://localhost:8003/swagger-ui.html
 
 server.port=8003
 
