--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,10 @@
 	<artifactId>hotel-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hotel-api</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot</description> 
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -27,7 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.2.0.RELEASE</version>
+        </dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -44,11 +47,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
+		<dependency> 
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.6.1</version>
-			<scope>compile</scope>
+			<scope>compile</scope> 
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -57,14 +60,44 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
-			<plugin>
+<!-- 		<plugin> -->
+<!--       Build an executable JAR -->
+<!--       <groupId>org.apache.maven.plugins</groupId> -->
+<!--       <artifactId>maven-jar-plugin</artifactId> -->
+<!--       <version>3.1.0</version> -->
+<!--       <configuration> -->
+<!--         <archive>  -->
+<!--           <manifest> -->
+<!--             <addClasspath>true</addClasspath> -->
+<!--             <classpathPrefix>lib/</classpathPrefix> -->
+<!--             <mainClass>com.hotel.hotelapi.HotelApiApplication</mainClass> -->
+<!--           </manifest> -->
+<!--         </archive> -->
+<!--       </configuration> -->
+<!--     </plugin> -->
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.springframework.boot</groupId> -->
+<!-- 				<artifactId>spring-boot-maven-plugin</artifactId> -->
+<!-- 			</plugin> -->
+		
+	<plugin>
+
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.hotel.hotelapi.HotelApiApplication</mainClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
